layout issues fix

--- a/app/scss/components/_projects.scss
+++ b/app/scss/components/_projects.scss
@@ -27,6 +27,7 @@
 	&__wrapper {
 		min-height: 100vh;
 		max-width: 1600px;
+		padding-inline: 5%;
 
 		& p {
 			font-family: u.$font;
